--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.8",
     "axios": "^1.7.2",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
@@ -25,7 +26,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.94.0"
   },
   "browser": {
     "child_process": false
