--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.12",
-    "vercel": "^35.1.0"
+    "vercel": "^35.1.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
