feature(Auth)adds auth routes and bring the master borboletas to client

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://teste:teste@cluster0.i7a9n.mongodb.net/info?retryWrites=true&w=majority
+AUTH_SECRET=qhuiDXFNEnJxUajMb0QA2SgyI&@Gd7Km
