--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
