--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 MONGODB_URI=mongodb+srv://teste:teste@cluster0.i7a9n.mongodb.net/info?retryWrites=true&w=majority
 AUTH_SECRET=qhuiDXFNEnJxUajMb0QA2SgyI&@Gd7Km
+ACCOUNT_ID='YOUR_ACCOUNT_ID'
+ACCESS_KEY_ID='YOUR_ACCESS_KEY_ID'
+SECRET_ACCESS_KEY='YOUR_SECRET_ACCESS_KEY'
+AUTH_TOKEN='YOUR_AUTH_TOKEN'
