--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.0",
+    "@aws-sdk/s3-request-presigner": "^3.651.0",
     "@cloudflare/next-on-pages": "^1.13.2",
     "@ducanh2912/next-pwa": "^10.2.8",
     "antd": "^5.20.6",
